--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,5 +1,20 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "me.tatarka:gradle-retrolambda:${rootProject.ext.retroLambdaVersion}"
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'me.tatarka.retrolambda'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'io.reactivex:rxjava:1.0.12'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.9.5'
+    testCompile 'com.google.guava:guava:19.0'
 }
